# user-storage

./: .gitlab-ci.yml  Cargo.toml  Dockerfile
migrations/2022-10-26-193024_initial/: down.sql  up.sql
src/: api.rs  async_redis.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: dtos.rs  mod.rs
src/config/: api.rs  mod.rs  postgres.rs  redis.rs
src/repo/: mod.rs  postgres.rs  redis.rs
