[package]
name = "user-storage"
version = "0.1.0"
edition = "2021"
authors = ["Artem Sidorenko <kronos44_0@mail.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
base64 = "0.13.1"
deadpool-diesel = "0.4.0"
diesel = { version = "2.0.2", features = ["postgres", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
envy = "0.4.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
serde_qs = { version = "0.10.1", features = ["warp"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
warp = "0.3.3"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.3" }


[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/bin/service.rs"


[[bin]]
name = "migrate"
path = "src/bin/migration.rs"
